Fix: Removed 1200px media query changes as realised my screen is 1960px, after leaving web developer the changes were too large for anything besides the emulated 4k view. Therefore not useful for large number of people.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,100 +634,6 @@ instead of ids*/
 		height: 700px;
 	}
 }
- /*Media changes needed to have a succinct website on 1200px or larger screens*/
-@media (min-width:1200px){
-    p {
-        font-size:1.5rem;
-    }
-
-    .hero-text h1{
-        font-size: 10rem;
-    }
-    
-    h2{
-        font-size: 4rem;
-    }
-
-    h3 {
-        font-size: 3rem;
-    }
-
-    h4 {
-        font-size: 2rem;
-    }
-
-    h5 {
-        font-size: 1.75rem;
-    }
-
-    h6 {
-        font-size: 1.5rem;
-    }
-
-    .intro-text h2 {
-        font-size: 8rem;
-    }
-
-    .btn-colour {
-        font-size:1.5rem;
-        max-width: 20rem;
-        padding: 1.5rem 0.5rem;
-    }
-
-    .inclusions ul li{
-        font-size: 1.5rem;
-    }
-
-    .tour-route-img {
-        height: 52rem;
-    }
-    	
-    .tourpage-inner .carousel-item {
-		height: 50rem;
-	}
-
-    .testimonials-inner .carousel-item {
-		height: 50rem;
-	}
-
-    .comms-panel {
-        height: 40rem;
-    }
-
-    a.nav-link {
-        font-size: 2rem;
-    }
-     /*Has to be on own selector rather than above selector as more specific override in min-width:768px media query*/
-    .navbar-brand {
-        font-size: 2rem;
-    }
-
-    .dropdown-item {
-        font-size: 2rem;
-    }
-
-    .brand-size {
-        height: 45px;
-        width: 50px;
-    }
 
 
-    .core-values i,
-    .key-details i {
-        height: 4rem;
-        width: 4rem;
-        font-size: 4rem;
-    }
-
-    .input-layout,
-    .form-control {
-        font-size: 1.5rem;
-    }
-
-    .about-img {
-        height: 45rem;
-    }
-        
-
-
-}
+   
